# actor_maker

./: .editorconfig  .env.example  .gitignore  =1.0.0  ACTOR_GOOD_TOGGLE.md  ACTOR_TRAINING_FLOW.md  ACTOR_TRAINING_IMPLEMENTATION.md  ACTOR_TRAINING_QUICK_START.md  AUTO_TRAIN_ACTORS.md  AUTO_TRAIN_QUICK_START.md  CACHE_BUSTING_ARCHITECTURE.md  CAPTION_SYSTEM_UPDATE.md  CHANGELOG.md  CHARACTER_DESCRIPTION_IN_PROMPTS.md  CHARACTER_SELECTION_IMPLEMENTATION.md  CLEANUP_SUMMARY.md  COMPLETION_CHECKLIST.md  COMPREHENSIVE_SYNC_FEATURE.md  CREATE_GITHUB_REPO.md  FAST_TRAINING_DATA_LOAD.md  FILEOUTPUT_FIX.md  IMAGE_CACHE_README.md  IMAGE_GENERATION_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  LAZY_LOADING_SUMMARY.md  LORA_TRAINING_SYSTEM.md  MANIFEST_AUTO_SYNC.md  MANIFEST_MIGRATION_SUMMARY.md  MIGRATION_COMPLETE.md  MIGRATION_READY.md  MIGRATION_SUMMARY.md  MONOCHROME_COLOR_STRIPPING.md  MULTIPLE_FILTER_SELECTION.md  Makefile  NGROK_NPM_MIGRATION.md  POSTER_FRAME_IMPLEMENTATION.md  POSTER_FRAME_QUICK_START.md  POSTER_FRAME_REGENERATION_UI.md  (+60 more)
data/: README.md  actorsData.json  actorsData.ts  styles_registry.json
debug/: ASPECT_RATIO_FIX.md  BASE_IMAGE_GENERATION_FIX.md  README.md  base_image_execution_checkpoint.json  base_image_full_payload.json  base_image_request.json  base_image_response.json  base_image_validation_action_plan.json  base_image_validation_checkpoint.json  base_image_validation_execution_results.json  base_image_validation_results.json  create_base_images_checkpoint.json  create_base_images_results.json  generation_request.json  generation_response.json  img2img_settings.json  poster_frame_request.json  poster_frame_response.json  training_data_cleanup_results.json  training_request.json  training_response.json  validator_image_request.json  validator_image_response.json
docs/: ACTOR_TRAINING_DATA.md  ACTOR_TRAINING_DATA_GENERATION.md  AWS_CLI_SETUP.md  BASE_IMAGE_GENERATION.md  BASE_IMAGE_VALIDATION.md  CAPTION_GUIDE.md  COLOR_TERM_STRIPPING.md  GPT_PROMPT_GENERATION.md  IMAGE_GENERATION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  LORA_TRAINING_GUIDE.md  POSTER_FRAME_GENERATION.md  PYTHON_VENV_EXECUTION.md  QUICK_REFERENCE.md  S3_IMPLEMENTATION.md  SELECTION_SETS.md  SELECTION_SETS_QUICK_START.md  SELECTION_SETS_UI_LAYOUT.md  TRAINING_DATA_GENERATION.md  TRAINING_DATA_MANAGEMENT.md  TRAINING_DATA_SYSTEMS_OVERVIEW.md  TRAINING_IMAGE_GENERATION_S3.md
examples/: auto_initialize_manifest_example.py  example_usage.py  generate_actor_training_data_example.py  generate_images_example.py  generate_poster_frame_example.py  generate_training_data_example.py  (+4 more)
(+1918 files in other folders)
